refactor: 리스트 복사 java 8 에 맞게 수정